; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_jmp_dest.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_jmp_dest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @jmp_dest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jmp_dest(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = add nsw i32 %6, 2
  %8 = call i32 @r_buf_read8_at(i32* %5, i32 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = add nsw i32 %10, 3
  %12 = call i32 @r_buf_read8_at(i32* %9, i32 %11)
  %13 = shl i32 %12, 8
  %14 = add nsw i32 %8, %13
  %15 = mul nsw i32 %14, 2
  ret i32 %15
}

declare dso_local i32 @r_buf_read8_at(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
